[tool.poetry]
name = "pest"
version = "0.1.0"
description = "Demonstrates pest classifiton"
authors = ["Tanmoy <7tanmoy7mondal7@gmail.com>"]

[tool.poetry.dependencies]
python >="3.7,<3.9.7"
streamlit = ">=1.2.0"
tensorflow = ">=1.15.4,<2.0"
scikit_learn = ">=0.20.0"


[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = false
